# estudo_streamlit

./: pyproject.toml
